Update Helm Chart

--- a/modules/ROOT/pages/deployment/container/orchestration/generic-secrets-tab-3.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/generic-secrets-tab-3.adoc
@@ -1,4 +1,4 @@
-= secrets.yaml 
+= generic-secrets.yaml 
 
 == Chart Version: {tab_3_tab_text}
 
@@ -6,5 +6,5 @@
 
 [source,yaml]
 ----
-include::example$deployment/container/orchestration/secrets-tab-3.yaml[]
+include::example$deployment/container/orchestration/generic-secrets-tab-3.yaml[]
 ----
