--- a/modules/ROOT/pages/deployment/container/orchestration/generic-secrets-tab-2.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/generic-secrets-tab-2.adoc
@@ -1,10 +1,10 @@
-= secrets.yaml 
+= generic-secrets.yaml
 
-== Chart Version: {tab_1_tab_text}
+== Chart Version: {tab_2_tab_text}
 
 // Note that this page is created because when the contents of the included yaml is big, the tab size would be too high and not comfortable to read.
 
 [source,yaml]
 ----
-include::example$deployment/container/orchestration/secrets-tab-1.yaml[]
+include::example$deployment/container/orchestration/generic-secrets-tab-2.yaml[]
 ----
