--- a/modules/ROOT/pages/deployment/index.adoc
+++ b/modules/ROOT/pages/deployment/index.adoc
@@ -13,7 +13,7 @@
 
 * If you have already decided on a container instance with one or more containers, checkout the xref:deployment/container/container-setup.adoc[Container Setup].
 
-* For a more complex or enterprise setup, consider reading the xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration]. This document also covers the use of Kubernetes and Helm Charts.
+* For a more complex or enterprise setup, consider reading xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration]. This document also covers the use of Kubernetes and Helm Charts.
 
 * The next steps will likely be mounting a xref:deployment/nfs/nfs.adoc[Network File System] and managing xref:deployment/services/services.adoc[Services].
 
